--- a/packages/slate-base64-serializer/package.json
+++ b/packages/slate-base64-serializer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slate-base64-serializer",
+  "name": "@contentful/slate-base64-serializer",
   "description": "A Base64 serializer for Slate editors.",
   "version": "0.2.94",
   "license": "MIT",
