--- a/packages/slate-hotkeys/package.json
+++ b/packages/slate-hotkeys/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slate-hotkeys",
+  "name": "@contentful/slate-hotkeys",
   "description": "A set of function to detect common keypresses in a platform-agnostic way",
   "version": "0.2.8",
   "license": "MIT",
