--- a/packages/slate-plain-serializer/package.json
+++ b/packages/slate-plain-serializer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slate-plain-serializer",
+  "name": "@contentful/slate-plain-serializer",
   "description": "A plain text serializer for Slate editors.",
   "version": "0.6.33",
   "license": "MIT",
