--- a/packages/slate-prop-types/package.json
+++ b/packages/slate-prop-types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slate-prop-types",
+  "name": "@contentful/slate-prop-types",
   "description": "A set of React prop type checkers for Slate editors.",
   "version": "0.5.24",
   "license": "MIT",
