--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "benchmark:prepare": "mkdir -p ./tmp && cross-env BABEL_ENV=benchmark babel benchmark --out-dir tmp/benchmark/",
     "bootstrap": "lerna bootstrap && yarn build",
     "build": "rollup --config ./support/rollup/config.js",
-    "build:production": "cross-env NODE_ENV=production rollup --config ./support/rollup/config.js && cross-env NODE_ENV=production webpack --config support/webpack/config.js",
+    "build:production": "cross-env NODE_ENV=production rollup --config ./support/rollup/config.js",
     "clean": "lerna run clean && rm -rf ./node_modules ./dist ./build",
     "gh-pages": "gh-pages --dist ./build",
     "lint": "yarn lint:eslint && yarn lint:prettier",
@@ -100,7 +100,7 @@
     "lint:prettier": "prettier --list-different '**/*.{md,json,css}'",
     "open": "open http://localhost:8080",
     "prettier": "prettier --write '**/*.{js,jsx,md,json,css}'",
-    "release": "yarn build:production && yarn test && yarn lint && lerna publish && yarn gh-pages",
+    "release": "yarn build:production && yarn test && yarn lint && lerna publish",
     "server": "webpack-dev-server --config ./support/webpack/config.js",
     "start": "npm-run-all --parallel --print-label watch server",
     "test": "cross-env BABEL_ENV=test FORBID_WARNINGS=true mocha --require babel-core/register ./packages/*/test/index.js",
